2012-06-04  Takashi Toyoshima  <toyoshim@chromium.org>

        [WebSocket] Send requires super linear time against data size
        https://bugs.webkit.org/show_bug.cgi?id=87383

        Reviewed by Kent Tamura.

        * wtf/StreamBuffer.h: Added.
        (WTF):
        (StreamBuffer):
        (WTF::StreamBuffer::StreamBuffer):
        (WTF::StreamBuffer::~StreamBuffer):
        (WTF::StreamBuffer::isEmpty):
        (WTF::StreamBuffer::append):
        (WTF::StreamBuffer::consume):
        (WTF::StreamBuffer::size):
        (WTF::StreamBuffer::firstBlockData):
        (WTF::StreamBuffer::firstBlockSize):

2012-06-04  Patrick Gansterer  <paroga@webkit.org>

        Port RAMSize to WinCE
        https://bugs.webkit.org/show_bug.cgi?id=87854

        Reviewed by Geoffrey Garen.

        WinCE has no GlobalMemoryStatusEx() function. Use GlobalMemoryStatus() instead.

        * wtf/RAMSize.cpp:
        (WTF::computeRAMSize):

2012-06-01  Xianzhu Wang  <wangxianzhu@chromium.org>

        Remove dependency from ImageDiff to WTF
        https://bugs.webkit.org/show_bug.cgi?id=88147

        Reviewed by Adam Barth.

        * WTF.gyp/WTF.gyp:

2012-06-01  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Save one copy when going from 8-bit WTF::String to QString

        Asking for characters() of an 8-bit string will make a 16-bit copy internally
        in WTF::String. Since we're going to copy the data to QStringData anyways, which
        is 16-bit, we can do the conversion ourselves and save one copy.

        Reviewed by Simon Hausmann.

        * wtf/qt/StringQt.cpp:
        (WTF::String::operator QString):

2012-05-30  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Make conversion from QString to WTF::String (and back again) ~free

        https://bugs.webkit.org/show_bug.cgi?id=87847

        Instead of copying the QString data when converting to a WTF::String we