@@ -1,3 +1,14 @@
+2012-06-05  Roland Takacs  <takacs.roland@stud.u-szeged.hu>
+
+        [Qt] Use GraphicsContext3DOpenGLES.cpp when using OpenGL ES
+        https://bugs.webkit.org/show_bug.cgi?id=78720
+
+        Reviewed by Noam Rosenthal.
+
+        Defined a global Opengl ES macro to check OpenGL ES on every platforms.
+
+        * wtf/Platform.h:
+
 2012-06-04  Takashi Toyoshima  <toyoshim@chromium.org>
 
         [WebSocket] Send requires super linear time against data size
